erDiagram
  AUTH_USERS ||--o| EMPLOYEES : "auth_user_id"
  EMPLOYEES ||--o{ TRAINING_PROGRESS : "employee_id"
  EMPLOYEES ||--o{ NOTIFICATIONS : "employee_id"

  COURSES ||--o| QUIZZES : "quiz_id"
  COURSES ||--o{ TRAINING_PROGRESS : "course_id"
  COURSES }o--o| PRODUCTS : "product_id"
  COURSES }o--o| EMPLOYEES : "department text match"

  QUIZZES ||--o{ QUIZ_QUESTIONS : "quiz_id"

  EMPLOYEES {
    uuid id PK
    uuid auth_user_id FK
    text email UK
    text full_name
    text role "admin/manager/employee"
    text department
    text position
    text phone
    text avatar_url
    date birth_date
    text gender
    text work_location
    text employment_status "active/inactive"
    bool must_change_password
    timestamp created_at
    timestamp updated_at
  }

  COURSES {
    text course_id PK
    text product_id FK
    text course_name
    text course_type
    text brand "Doscom Noma NoiBo Claude"
    text category
    text department "phong ban target"
    text thumbnail_url
    text slide_url
    text video_url
    text quiz_id FK
    text is_required
    text pass_score
    text max_attempts
    text status
  }

  PRODUCTS {
    text product_id PK
    text product_code "SKU"
    text product_name
    text brand
    text category
    text short_description
    text feature_1
    text feature_2
    text feature_3
    text feature_4
    text thumbnail_url
    text status
  }

  QUIZZES {
    text quiz_id PK
    text course_id FK
    text quiz_title
    text pass_score
    text max_attempts
    text status
  }

  QUIZ_QUESTIONS {
    text question_id PK
    text quiz_id FK
    text course_id FK
    text question_text
    text option_a
    text option_b
    text option_c
    text option_d
    text correct_answer "A B C D"
    text status
  }

  TRAINING_PROGRESS {
    uuid id PK
    uuid employee_id FK
    text course_id FK
    int video_progress
    int quiz_score
    int quiz_time_seconds
    bool quiz_passed
    timestamp quiz_completed_at
    text status "not_started in_progress completed"
    timestamp updated_at
  }

  NOTIFICATIONS {
    uuid id PK
    uuid employee_id FK
    text type "course_new system"
    text title
    text message
    text link_view "course-detail"
    text link_id
    bool is_read
    timestamp created_at
  }
